<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_account"
            android:icon="@drawable/baseline_person_black_18dp"
            android:title="@string/account"/>
        <item android:id="@+id/nav_chat"
            android:icon="@drawable/baseline_chat_black_18dp"
            android:title="@string/chat"/>
        <item android:id="@+id/nav_payment"
            android:icon="@drawable/baseline_payment_black_18dp"
            android:title="@string/payment"/>
    </group>

    <item android:title="@string/others">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/baseline_share_black_18dp"
                android:title="@string/share"/>
            <item android:id="@+id/nav_settings"
                android:icon="@drawable/baseline_settings_black_18dp"
                android:title="@string/settings"/>
            <item android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_power_settings_new_black_18dp"
                android:title="@string/Logout"/>
        </menu>
    </item>

</menu>